2014-11-20  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/main.c (error_usage): Refactored code to output error.
	(main): Use new function instead of goto.

	* src/invlib.c (open_for_reading, open_file_with_flipped_name)
	(open_file_with_possibly_flipped_name): Refactored code dealing
	with naming of inverted index files (.in.out <--> .out.in) into
	individual functions.
	(invopen): Use refactored functions.  Reduce use of gotos.

	* *.c, *.h: Code Cleanups: Unsigned integer suffixes. Allocate
	based on size of pointed-to object, rather than having to spell
	out the data type.  Replace clumsy &array[index] by cleaner
	array+index.  Replace several unspecified uses of unspecified
	"unsigned" by unsigned int or size_t.

	* src/alloc.c (mymalloc, mycalloc, myrealloc): Drop pointless cast
	from size_t to unsigned.

	* configure.in: Autoupdated to autoconf-2.69.  Removed outdated
	AC_TYPE_SIGNAL check.

	* aclocal.m4, configure, config.h.in, Makefile.in,
	contrib/Makefile.in, doc/Makefile.in, src/Makefile.in:
	Regenerated by automake-1.14, autoconf-2.69.

	* ylwrap, mkinstalldirs, missing, install-sh, depcomp, config.sub,
	config.guess, compile: Replaced by current versions from auto
	tools.

	* contrib/xcscope/cscope-indexer: Automatically wrap pathnames in
	quotes if they contain blanks or tabs.

2014-11-16  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/fscanner.l (skipcomment_input, comment, insidestring_input)
	(string_terminator, YY_INPUT): Remove hand-coded comment skipping
	function, use flex-generated one instead.

2014-04-15  Neil Horman <nhorman@tuxdriver.com>

	* src/find.c (putpostingref): Ensure that initialization of
	function name (sf bz 200).

2013-09-25  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* doc/cscope.1: "Find assignments to" search was missing from the
	man page.  Thanks to Roberto E. Vargas Caballero for noticing
	this.

2013-06-26  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
